--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "freeze-existing-props",
-  "version": "0.0.1002",
+  "version": "0.0.1003",
   "description": "Freeze existing props on an object",
-  "main": "index.js",
-  "typings": "index.d.ts",
-  "types": "index.d.ts",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "suman"
+    "test": "suman test"
   },
   "repository": {
     "type": "git",
@@ -24,12 +24,12 @@
     "node.js"
   ],
   "author": "Olegzandr VD",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ORESoftware/freeze-existing-props/issues"
   },
   "homepage": "https://github.com/ORESoftware/freeze-existing-props#readme",
   "devDependencies": {
-    "@types/node": "^8.0.7"
+    "@types/node": "latest"
   }
 }
