--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 ### folders
 .idea
 node_modules
+dist/*
 
 ### matching
 *.log
@@ -9,3 +10,6 @@ node_modules
 ###
 package-lock.json
 yarn.lock
+
+### negation
+!dist/README.md
