--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,23 @@
 {
   "compilerOptions": {
+    "outDir": "dist",
+    "skipLibCheck": true,
     "declaration": true,
     "baseUrl": ".",
-    "types": [
-      "node"
-    ],
     "allowJs": false,
-    "target": "es5",
+    "target": "es6",
     "module": "commonjs",
     "noImplicitAny": true,
     "removeComments": true,
     "lib": [
       "es2015",
-      "es2016"
+      "es2016",
+      "es2017"
     ]
   },
   "allowJs": false,
   "compileOnSave": false,
-  "exclude": [
-    "test",
-    "node_modules"
+  "include": [
+    "src"
   ]
 }
